--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ media
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
+staticfiles/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
@@ -120,5 +121,6 @@ dmypy.json
 
 # AWS private key
 *.pem
+
 
 # End of https://www.gitignore.io/api/django
