--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 appdirs==1.4.3
 attrs==19.3.0
 Click==7.0
+dj-database-url==0.5.0
 Django==2.2.7
 django-mathfilters==0.4.0
 django-seed==0.1.9
 entrypoints==0.3
 Faker==2.0.4
+gunicorn==20.0.3
 mccabe==0.6.1
 pathspec==0.6.0
 Pillow==6.2.1
-pycodestyle==2.5.0
-pyflakes==2.1.1
+psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 pytz==2019.3
-regex==2019.11.1
 six==1.13.0
 sqlparse==0.3.0
 text-unidecode==1.3
 toml==0.10.0
 typed-ast==1.4.0
+whitenoise==4.1.4
