--- a/.gitignore
+++ b/.gitignore
@@ -119,8 +119,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# AWS private key
+# AWS
 *.pem
+credentials.csv
 
 
 # End of https://www.gitignore.io/api/django
