--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
 appdirs==1.4.3
 attrs==19.3.0
+boto3==1.10.28
+botocore==1.13.28
 Click==7.0
 dj-database-url==0.5.0
 Django==2.2.7
 django-mathfilters==0.4.0
 django-seed==0.1.9
+django-storages==1.8
+docutils==0.15.2
 entrypoints==0.3
 Faker==2.0.4
 gunicorn==20.0.3
+jmespath==0.9.4
 mccabe==0.6.1
 pathspec==0.6.0
 Pillow==6.2.1
 psycopg2-binary==2.8.4
-python-dateutil==2.8.1
+python-dateutil==2.8.0
 pytz==2019.3
+regex==2019.11.1
+s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.3.0
 text-unidecode==1.3
 toml==0.10.0
 typed-ast==1.4.0
+urllib3==1.25.7
 whitenoise==4.1.4
